yaml/min-cluster-allinone/ingress-nginx-min/proxy/ingress-nginx-apollo-config.yaml
apiVersion: extensions/v1beta1
#apiVersion: v1
kind: Ingress
metadata:
  annotations:
    #nginx.ingress.kubernetes.io/ssl-redirect: "false"
    #nginx.ingress.kubernetes.io/rewrite-target: /
  labels:
    app: service-apollo-config-server-dev
  name: service-apollo-config-server-dev
  namespace: apollo-min
spec:
  rules:
  - host: dev.apollo-config.future.com
    http:
      paths:
      - backend:
          serviceName: service-apollo-config-server-dev
          servicePort: 8080
        path: /
