yaml/min-cluster-allinone/ingress-nginx-min/proxy/ingress-nginx-apollo-portal.yaml
apiVersion: extensions/v1beta1
#apiVersion: v1
kind: Ingress
metadata:
  annotations:
    #nginx.ingress.kubernetes.io/ssl-redirect: "false"
    #nginx.ingress.kubernetes.io/rewrite-target: /
  labels:
    app: service-apollo-portal-server
  name: service-apollo-portal-server
  namespace: inc
spec:
  rules:
  - host: dev.apollo-portal.future.com
    http:
      paths:
      - backend:
          serviceName: service-apollo-portal-server
          servicePort: 8070
        path: /
