yaml/min-cluster-allinone/ingress-nginx-min/proxy/ingress-nginx-consul.yaml
apiVersion: extensions/v1beta1
#apiVersion: v1
kind: Ingress
metadata:
  annotations:
    #nginx.ingress.kubernetes.io/ssl-redirect: "false"
    #nginx.ingress.kubernetes.io/rewrite-target: /
  labels:
    app: consul
  name: consul
  namespace: consul
spec:
  rules:
  - host: consul.future.com
    http:
      paths:
      - backend:
          serviceName: consul-ui
          servicePort: 8500
        path: /
