yaml/min-cluster-allinone/ingress-nginx-min/proxy/ingress-nginx-es-min.yaml
apiVersion: extensions/v1beta1
#apiVersion: v1
kind: Ingress
metadata:
  annotations:
    #nginx.ingress.kubernetes.io/ssl-redirect: "false"
    #nginx.ingress.kubernetes.io/rewrite-target: /
  labels:
    app: elasticsearch
  name: es-min
  namespace: es-min
spec:
  rules:
  - host: es-min-admin.future.com
    http:
      paths:
      - backend:
          serviceName: es-min-ingest
          servicePort: 9200
        path: /
