yaml/min-cluster-allinone/ingress-nginx-min/proxy/ingress-nginx-gitlab.yaml
apiVersion: extensions/v1beta1
#apiVersion: v1
kind: Ingress
metadata:
  annotations:
    #nginx.ingress.kubernetes.io/ssl-redirect: "false"
    #nginx.ingress.kubernetes.io/rewrite-target: /
  labels:
    name: gitlab
  name: gitlab
  namespace: gitlab
spec:
  rules:
  - host: gitlab.future.coohua.com
    http:
      paths:
      - backend:
          serviceName: gitlab
          servicePort: 80
        path: /

  #- host: es-min.future.coohua.com
  #  transport:
  #    paths:
  #    - backend:
  #        serviceName: es-min-ingest
  #        servicePort: 9300
  #      path: /
