yaml/min-cluster-allinone/ingress-nginx-min/proxy/ingress-nginx-prometheus-k8s.yaml
apiVersion: extensions/v1beta1
#apiVersion: v1
kind: Ingress
metadata:
  annotations:
    #nginx.ingress.kubernetes.io/ssl-redirect: "false"
    #nginx.ingress.kubernetes.io/rewrite-target: /
  labels:
    prometheus: k8s
  name: prometheus-k8s
  namespace: monitoring
spec:
  rules:
  - host: prometheus-k8s.future.com
    http:
      paths:
      - backend:
          serviceName: prometheus-k8s
          servicePort: 9090
        path: /
