yaml/min-cluster-allinone/ingress-nginx-min/proxy/ingress-nginx-prometheus.yaml
apiVersion: extensions/v1beta1
#apiVersion: v1
kind: Ingress
metadata:
  annotations:
    #nginx.ingress.kubernetes.io/ssl-redirect: "false"
    #nginx.ingress.kubernetes.io/rewrite-target: /
  labels:
    app.kubernetes.io/component: controller
    app.kubernetes.io/name: prometheus-operator
    app.kubernetes.io/version: v0.30.0
  name: prometheus-operator
  namespace: prometheus-operator
spec:
  rules:
  - host: prometheus-operator.future.coohua.com
    http:
      paths:
      - backend:
          serviceName: prometheus-operator
          servicePort: 8080
        path: /

  #- host: es-min.future.coohua.com
  #  transport:
  #    paths:
  #    - backend:
  #        serviceName: es-min-ingest
  #        servicePort: 9300
  #      path: /
